--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "nuxt": "^3.9.0",
     "vue": "^3.4.3",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@fontsource-variable/rubik": "^5.0.20",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
